# TotalSegmentator-OsiriX-Horos-Plugin

./: .gitignore  README.md  build.sh  pyproject.toml  setup.py
MyOsiriXPluginFolder-Swift/: ClassSelectionWindowController.swift  Info.plist  Plugin.swift  RunSegmentationWindowController+TaskPicker.swift  RunSegmentationWindowController.swift  RunSegmentationWindowController.xib  SegmentationProgressWindowController.swift  TSVolumetricROIImporter.h  TSVolumetricROIImporter.m  TotalSegmentatorHorosPlugin+Audit.swift  TotalSegmentatorHorosPlugin+ClassSelection.swift  TotalSegmentatorHorosPlugin+Environment.swift  TotalSegmentatorHorosPlugin+Export.swift  TotalSegmentatorHorosPlugin+Import.swift  TotalSegmentatorHorosPlugin+Preferences.swift  TotalSegmentatorHorosPlugin+Scripts.swift  TotalSegmentatorHorosPlugin+Segmentation.swift  TotalSegmentatorHorosPlugin+Settings.swift  TotalSegmentatorHorosPlugin-Bridging-Header.h  TotalSegmentatorHorosPlugin-Bridging-Header_Horos.h  TotalSegmentatorHorosPlugin-Bridging-Header_OsiriX.h  TotalSegmentatorJobManifestTypes.swift  TotalSegmentatorPluginTypes.swift  TotalSegmentatorRuntimeCapabilities.swift  TotalSegmentatorTaskCapabilities.json
Releases/Horos/TotalSegmentatorPlugin 2026 06 21.osirixplugin/Contents/Resources/python_bridge/: pyproject.toml
Releases/Horos/TotalSegmentatorPlugin 2026 06 21.osirixplugin/Contents/Resources/python_bridge/ts_horos_bridge/: __init__.py  runtime_capabilities.py  schemas.py
schemas/: release_quality_gate.schema.json
tests/: test_canonical_multilabel_contract.py  test_dicom_export_hardening.py  (+25 more)
(+39 files in other folders)
