[project]
name = "ts-horos-bridge"
version = "0.1.0"
description = "Internal Python bridge for the TotalSegmentator Horos/OsiriX plugin"
requires-python = ">=3.9"

[tool.setuptools.package-data]
ts_horos_bridge = ["TotalSegmentatorTerminology.json"]

[tool.pytest.ini_options]
testpaths = ["../../tests"]
